--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+"start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "e2e": "tsc && concurrently \"http-server -s\" \"protractor protractor.config.js\" --kill-others --success first",
     "lint": "tslint ./app/**/*.ts -t verbose",
     "lite": "lite-server",
@@ -27,22 +27,22 @@
     "@angular/router": "~3.4.0",
 
     "angular-in-memory-web-api": "~0.2.2",
-    "systemjs": "0.19.40",
+    "systemjs": "0.19.41",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.1",
+    "rxjs": "5.0.2",
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
-    "typescript": "~2.0.10",
+    "typescript": "~2.1.4",
 
     "canonical-path": "0.0.2",
     "http-server": "^0.9.0",
-    "tslint": "^3.15.1",
+    "tslint": "^4.2.0",
     "lodash": "^4.16.4",
-    "jasmine-core": "~2.4.1",
+    "jasmine-core": "~2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
